// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Error > renders with as correctly 1`] = `
"<section data-slot="root" class="">
  <p data-slot="statusCode" class="">404</p>
  <h1 data-slot="statusMessage" class="">Not Found</h1>
  <p data-slot="message" class="">The page you are looking for does not exist.</p>
  <div data-slot="links" class=""><button type="button" data-slot="base" class="">
      <!--v-if--><span data-slot="label" class="">Back to home</span>
      <!--v-if-->
    </button></div>
</section>"
`;

exports[`Error > renders with class correctly 1`] = `
"<main data-slot="root" class="min-h-full">
  <p data-slot="statusCode" class="">404</p>
  <h1 data-slot="statusMessage" class="">Not Found</h1>
  <p data-slot="message" class="">The page you are looking for does not exist.</p>
  <div data-slot="links" class=""><button type="button" data-slot="base" class="">
      <!--v-if--><span data-slot="label" class="">Back to home</span>
      <!--v-if-->
    </button></div>
</main>"
`;

exports[`Error > renders with clear correctly 1`] = `
"<main data-slot="root" class="">
  <p data-slot="statusCode" class="">404</p>
  <h1 data-slot="statusMessage" class="">Not Found</h1>
  <p data-slot="message" class="">The page you are looking for does not exist.</p>
  <div data-slot="links" class=""><button type="button" data-slot="base" class="">
      <!--v-if--><span data-slot="label" class="">Home</span>
      <!--v-if-->
    </button></div>
</main>"
`;

exports[`Error > renders with default slot correctly 1`] = `
"<main data-slot="root" class="">
  <p data-slot="statusCode" class="">404</p>
  <h1 data-slot="statusMessage" class="">Not Found</h1>
  <p data-slot="message" class="">The page you are looking for does not exist.</p>
  <div data-slot="links" class=""><button type="button" data-slot="base" class="">
      <!--v-if--><span data-slot="label" class="">Back to home</span>
      <!--v-if-->
    </button></div>
</main>"
`;

exports[`Error > renders with error correctly 1`] = `
"<main data-slot="root" class="">
  <p data-slot="statusCode" class="">404</p>
  <h1 data-slot="statusMessage" class="">Not Found</h1>
  <p data-slot="message" class="">The page you are looking for does not exist.</p>
  <div data-slot="links" class=""><button type="button" data-slot="base" class="">
      <!--v-if--><span data-slot="label" class="">Back to home</span>
      <!--v-if-->
    </button></div>
</main>"
`;

exports[`Error > renders with error using status/statusText correctly 1`] = `
"<main data-slot="root" class="">
  <p data-slot="statusCode" class="">500</p>
  <h1 data-slot="statusMessage" class="">Internal Server Error</h1>
  <p data-slot="message" class="">Something went wrong.</p>
  <div data-slot="links" class=""><button type="button" data-slot="base" class="">
      <!--v-if--><span data-slot="label" class="">Back to home</span>
      <!--v-if-->
    </button></div>
</main>"
`;

exports[`Error > renders with links slot correctly 1`] = `
"<main data-slot="root" class="">
  <p data-slot="statusCode" class="">404</p>
  <h1 data-slot="statusMessage" class="">Not Found</h1>
  <p data-slot="message" class="">The page you are looking for does not exist.</p>
  <div data-slot="links" class="">Links slot</div>
</main>"
`;

exports[`Error > renders with message slot correctly 1`] = `
"<main data-slot="root" class="">
  <p data-slot="statusCode" class="">404</p>
  <h1 data-slot="statusMessage" class="">Not Found</h1>
  <p data-slot="message" class="">Message slot</p>
  <div data-slot="links" class=""><button type="button" data-slot="base" class="">
      <!--v-if--><span data-slot="label" class="">Back to home</span>
      <!--v-if-->
    </button></div>
</main>"
`;

exports[`Error > renders with pohon correctly 1`] = `
"<main data-slot="root" class="">
  <p data-slot="statusCode" class="">404</p>
  <h1 data-slot="statusMessage" class="">Not Found</h1>
  <p data-slot="message" class="">The page you are looking for does not exist.</p>
  <div data-slot="links" class="mt-16"><button type="button" data-slot="base" class="">
      <!--v-if--><span data-slot="label" class="">Back to home</span>
      <!--v-if-->
    </button></div>
</main>"
`;

exports[`Error > renders with redirect correctly 1`] = `
"<main data-slot="root" class="">
  <p data-slot="statusCode" class="">404</p>
  <h1 data-slot="statusMessage" class="">Not Found</h1>
  <p data-slot="message" class="">The page you are looking for does not exist.</p>
  <div data-slot="links" class=""><button type="button" data-slot="base" class="">
      <!--v-if--><span data-slot="label" class="">Back to home</span>
      <!--v-if-->
    </button></div>
</main>"
`;

exports[`Error > renders with statusCode slot correctly 1`] = `
"<main data-slot="root" class="">
  <p data-slot="statusCode" class="">Status code slot</p>
  <h1 data-slot="statusMessage" class="">Not Found</h1>
  <p data-slot="message" class="">The page you are looking for does not exist.</p>
  <div data-slot="links" class=""><button type="button" data-slot="base" class="">
      <!--v-if--><span data-slot="label" class="">Back to home</span>
      <!--v-if-->
    </button></div>
</main>"
`;

exports[`Error > renders with statusMessage slot correctly 1`] = `
"<main data-slot="root" class="">
  <p data-slot="statusCode" class="">404</p>
  <h1 data-slot="statusMessage" class="">Status message slot</h1>
  <p data-slot="message" class="">The page you are looking for does not exist.</p>
  <div data-slot="links" class=""><button type="button" data-slot="base" class="">
      <!--v-if--><span data-slot="label" class="">Back to home</span>
      <!--v-if-->
    </button></div>
</main>"
`;
